--- a/ipynb/PMI SVD.ipynb
+++ b/ipynb/PMI SVD.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "PMI SVD\n",
+    "-------\n",
+    "\n",
+    "Testing out the idea that useful word embeddings can be gleaned by performing the SVD on the matrix of pointwise mutual information between words and their co-occurrances. [Idea from here.](http://multithreaded.stitchfix.com/blog/2017/10/18/stop-using-word2vec/)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -53,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,9 +147,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('to', 0.0092093790167196501),\n",
+       " ('just', 0.0078288557941133749),\n",
+       " ('a', 0.0069691862547100166),\n",
+       " ('hit', 0.0039355643370884881),\n",
+       " ('all', 0.0038155953455745071),\n",
+       " ('the', 0.003211757047555244),\n",
+       " (\"i'm\", 0.0031908668861541467),\n",
+       " ('time', 0.003039398076669351),\n",
+       " ('happened', 0.002948875574251482),\n",
+       " ('side', 0.0028487890991962597)]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "similar_words(\"zygote\", word_index, pmi_svd)"
    ]
